--- a/dp_frontend_m/src/components/Main/Main.css
+++ b/dp_frontend_m/src/components/Main/Main.css
@@ -1,3 +1,44 @@
+html {
+    background-color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+div {
+    margin: 10px;
+    padding: 15px;
+}
+  
+input {
+    border: none;
+    color: #333;
+    background: transparent;
+    border-bottom: 1px dotted black;
+    margin: 5px;
+}
+ 
+input:focus {
+    outline: none;
+    border-color: #51CBEE;
+}
+
+button {
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    background: #0B63F6;
+    box-shadow: 0 5px 0 #003CC5;
+    margin: 5px;
+}
+
+button:hover {
+    background: #003CC5;
+    box-shadow: none;
+    position: relative;
+    top: 5px;
+}
+
 .main {
     display: flex;
     justify-content: center;
