--- a/dp_frontend_m/src/components/FileEditor/FileEditor.css
+++ b/dp_frontend_m/src/components/FileEditor/FileEditor.css
@@ -5,11 +5,12 @@
 }
 
 .subcontainer {
-    display: flex;
     flex-direction: column;
-    margin-right: 10px;
-    padding-right: 10px;
-    max-width: 200px;
+    margin: 5px;
+    max-width: 100px;
+    font-weight: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .file {
