--- a/dp_frontend_m/src/components/Main/Main.css
+++ b/dp_frontend_m/src/components/Main/Main.css
@@ -1,7 +1,14 @@
 html {
     background-color: aliceblue;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Palatino, Helvetica, sans-serif;
     font-size: 16px;
+    padding: 0px;
+    margin: auto;
+    text-align: center;
+    vertical-align: middle;
+    width: 1280px;
+    font-weight: bold;
+    box-sizing: border-box;
 }
 
 div {
@@ -23,6 +30,9 @@ input:focus {
 }
 
 button {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
     border: none;
     border-radius: 5px;
     text-decoration: none;
@@ -30,6 +40,9 @@ button {
     background: #0B63F6;
     box-shadow: 0 5px 0 #003CC5;
     margin: 5px;
+    height: 40px;
+    width: auto;
+    font-weight: bolder;
 }
 
 button:hover {
