Userlist and share file fix

--- a/dp_frontend_m/src/components/Cloud/Cloud.css
+++ b/dp_frontend_m/src/components/Cloud/Cloud.css
@@ -3,6 +3,11 @@
     border: 1px black solid;
 }
 
+.list-btn {
+    display: flex;
+    align-items: center;
+}
+
 .add_file_block {
     margin-top: 10px;
     display: flex;
